[update] final update - first completion

--- a/index.html
+++ b/index.html
@@ -14,21 +14,25 @@
 			</div>
 
 			<ul class="nav__menu">
-				<li><img src="img/blue_t.png" /></li>
-				<li><img src="img/blue_p.png" /></li>
-				<li><img src="img/blue_s.png" /></li>
-				<li><button class="btn nav__button-blue">blue</button></li>
-				<li><button class="btn nav__button-yellow">yellow</button></li>
-				<li><button class="btn nav__button-pink">pink</button></li>
+				<li class="nav__menu-item" id="tshirts">
+					<img src="img/blue_t.png" />
+				</li>
+				<li class="nav__menu-item" id="pants"><img src="img/blue_p.png" /></li>
+				<li class="nav__menu-item" id="skirt"><img src="img/blue_s.png" /></li>
+				<li class="nav__menu-item" id="blue">
+					<button class="btn nav__button-blue">blue</button>
+				</li>
+				<li class="nav__menu-item" id="yellow">
+					<button class="btn nav__button-yellow">yellow</button>
+				</li>
+				<li class="nav__menu-item" id="pink">
+					<button class="btn nav__button-pink">pink</button>
+				</li>
 			</ul>
 		</nav>
 
 		<section class="section">
-			<div class="section__list">
-				<div class="section__item">
-					<img src="img/blue_t.png" alt="" />
-				</div>
-			</div>
+			<ul class="section__list"></ul>
 		</section>
 	</body>
 </html>
